--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jephraim-manansala
 linkedin_username: jephraim-manansala
 
+collections:
+  stories:
+    output: true
+
 # Build settings
 theme: minima
 plugins:
