--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: jephraim-manansala
 github_username: jephraim-manansala
-show_excerpts: true
+excerpt_separator: "<!--more-->"
 
 # Build settings
 theme: minima
