--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Jephraim Manansala, MSc
 email: jephraim.manansala@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the Personal Website of Jephraim C. Manansala. A Data Scientist and Electrical Engineer.
+  This is the Personal Website of Jephraim C. Manansala. A Data Scientist, Business Analytics Specialist, and Electrical Engineer.
 baseurl: "" # the subpath of your site, e.g. /blogs
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: jephraim-manansala
